--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
         </header>
         <article>
             <h2>1. Moussaka - Grécia</h2>
+            <img src="imagens/Moussaka-500.png" alt="Moussaka">
             <p class="indent">A Moussaka é um prato típico mediterrâneo. Na Grécia, por exemplo, ele é extremamente popular.</p>
             <p>Olhando de longe ele é muito parecido com uma lasanha, mas seu preparo é bem diferente.  Geralmente a Moussaka é feita com molho de queijo bechamel, carne de cordeiro e berinjela.</p>
-            <img src="imagens/Moussaka-500.png" alt="Moussaka">
             <h2>2. Masala Dosa - ìndia</h2>
+            <img src="imagens/Masala-Dosa-500.png" alt="Masala Dosa">
             <p class="indent"> Este prato, tipicamente indiano, é parecido com uma panqueca, mas não se engane. A massa é feita de arroz e lentilhas e pode ter purê de batatas, cebolas fritas e chutney.</p>
             <p>Se você for para a Índia vai se deparar várias vezes com esse prato, extremamente popular no país.</p>
-            <img src="imagens/Masala-Dosa-500.png" alt="Masala Dosa">
             <h2>3. Tacos - México</h2>
+            <img src="imagens/Tacos-500.png" alt="Tacos">
             <p class="indent"> O Taco mexicano é uma comida muito popular, tanto que já ganhou adaptações para vários países, inclusive os EUA e o Brasil.</p>
             <p>Ele é feito de tortilhas à base de milho e recheado com carne, tomate, queijo e alface.</p>
-            <img src="imagens/Tacos-500.png" alt="Tacos">
             <h2>4. Escargot - França</h2>
+            <img src="imagens/Escargo-500.png" alt="Escargot">
             <p class="indent"> Esse aperitivo tipicamente francês é conhecido por todo o mundo. Ele é feito com caracóis servidos na casca, cozidos com manteiga de alho e salsa.</p>
             <p>O prato costuma ser bem caro, isso porque um escargot costuma levar de seis a oito meses para atingir 15g, que é o peso mínimo necessário para consumo.</p>
             <p>Além disso, como esses bichinhos são muito frágeis eles são criados em um ambiente todo controlado e, mesmo assim, têm um índice de mortalidade de 12% a 15%.</p>
-            <img src="imagens/Escargo-500.png" alt="Escargot">
             <h2>5. Bulgogi - Coréia</h2>
+            <img src="imagens/Bulgogi-500.png" alt="Bulgogi">
             <p class="indent"> O Bulgogi é um prato coreano, que traduzido significa carne de fogo. Isso já dá um sinal de que o gosto e o tempero serão bem fortes, certo? Na Coréia o Bulgogi é temperado com vinho, cebola, molho de soja, gergelim e vegetais.</p>
             <p>É quase impossível visitar a Coréia e não se deparar com esse prato superpopular. Ele pode ser encontrado, inclusive, em redes de fast food coreanas.</p>
         </article>
